feat: add getFiles endpoint.
